# angular-cli

./: .bazelrc  README.md  WORKSPACE  package-lock.json  package.json  tsconfig.json
.circleci/: config.yml
docs/process/: bazel.md
integration/: BUILD.bazel
integration/build_angular/: .gitignore  BUILD.bazel  package.json
integration/build_angular/hello-world-app/: tsconfig.json
integration/build_angular/tests/: enable-ve.ts  utils.ts
integration/build_angular/tests/app-shell/: app-shell_spec_large.ts
integration/build_angular/tests/browser/: allow-js_spec_large.ts  assets_spec_large.ts  base-href_spec_large.ts  build-optimizer_spec_large.ts  cross-origin_spec_large.ts  deploy-url_spec_large.ts  index_spec_large.ts  profile_spec_large.ts  styles_spec_large.ts  unused-files-warning_spec_large.ts
integration/build_angular/tests/browser-1/: aot_spec.ts
integration/build_angular/tests/browser-2/: i18n_spec_large.ts
integration/build_angular/tests/browser-3/: rebuild_spec.ts
integration/build_angular/tests/browser-4/: source-map_spec_large.ts
integration/build_angular/tests/dev-server/: allowed-hosts_spec.ts  deploy-url_spec_large.ts  index_spec.ts  proxy_spec_large.ts  public-host_spec.ts  serve-path_spec.ts  ssl_spec.ts  works_spec_large.ts
integration/build_angular/tests/server/: base_spec_large.ts  external_dependencies_spec.ts  resources-output-path_spec.ts
integration/build_angular/tests/tslint/: works_spec_large.ts
integration/build_ng_packagr/: BUILD.bazel  package.json
integration/build_ng_packagr/tests/: enable-ve.ts  test.ts  tsconfig.json
integration/build_webpack/: .gitignore  BUILD.bazel  angular.json  package.json  test.ts  webpack.config.js
integration/build_webpack/tests/: test.ts
scripts/: test.ts
tests/: e2e_runner.ts
tests/e2e/setup/: 100-npm-link.ts
tests/e2e/tests/misc/: typescript-warning.ts
tests/e2e/utils/: process.ts
tests/legacy-cli/e2e/tests/basic/: update-1.0.ts
tools/npm_integration_test/: npm_integration_test.bzl
