load("//tools/npm_integration_test:npm_integration_test.bzl", "npm_integration_test")

filegroup(
    name = "build_webpack_test_sources",
    srcs = glob(
        include = ["build_webpack/**/*"],
        exclude = [
          "build_webpack/node_modules/**",
          "build_webpack/.yarn_local_cache/**",
        ],
    ),
)

npm_integration_test(
    name = "build_webpack_test",
    check_npm_packages = [
      "@angular-devkit/architect",
      "@angular-devkit/build-webpack",
      "@angular-devkit/core",
      "@ngtools/webpack",
    ],
    npm_packages = {
      "//packages/angular_devkit/architect:npm_package_archive": "@angular-devkit/architect",
      "//packages/angular_devkit/build_webpack:npm_package_archive": "@angular-devkit/build-webpack",
      "//packages/angular_devkit/core:npm_package_archive": "@angular-devkit/core",
      "//packages/ngtools/webpack:npm_package_archive": "@ngtools/webpack",
    },
    commands = [
      # Workaround https://github.com/yarnpkg/yarn/issues/2165
      # Yarn will cache file://dist URIs and not update
      "rm -rf ./.yarn_local_cache",
      "mkdir .yarn_local_cache",
      "patch-package-json",
      "$(rootpath @nodejs//:yarn_bin) install --cache-folder ./.yarn_local_cache",
      "$(rootpath @nodejs//:yarn_bin) test",
      "rm -rf ./.yarn_local_cache",
    ],
    data = [
      "@nodejs//:yarn_bin",
      "@nodejs//:yarn_files",
    ],
    test_files = ":build_webpack_test_sources"
)
