load("//tools/npm_integration_test:npm_integration_test.bzl", "npm_integration_test")

filegroup(
    name = "build_ng_packagr_sources",
    srcs = glob(
        include = ["**/*"],
        exclude = [
            "node_modules/**",
            ".yarn_local_cache/**",
        ],
    ),
)

npm_integration_test(
    name = "build_ng_packagr",
    check_npm_packages = [
        "@angular-devkit/architect",
        "@angular-devkit/build-ng-packagr",
        "@angular-devkit/core",
    ],
    commands = [
        # Workaround https://github.com/yarnpkg/yarn/issues/2165
        # Yarn will cache file://dist URIs and not update
        "rm -rf ./.yarn_local_cache",
        "mkdir .yarn_local_cache",
        "patch-package-json",
        "$(rootpath @nodejs//:yarn_bin) install --cache-folder ./.yarn_local_cache",
        "$(rootpath @nodejs//:yarn_bin) --cache-folder ./.yarn_local_cache test",
        "rm -rf ./.yarn_local_cache",
    ],
    data = [
        "@nodejs//:yarn_bin",
        "@nodejs//:yarn_files",
    ],
    npm_packages = {
        "//packages/angular_devkit/architect:npm_package_archive": "@angular-devkit/architect",
        "//packages/angular_devkit/build_ng_packagr:npm_package_archive": "@angular-devkit/build-ng-packagr",
        "//packages/angular_devkit/core:npm_package_archive": "@angular-devkit/core",
    },
    test_files = ":build_ng_packagr_sources",
)
